[package]
name = "fe_disengage"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

# cobapi = { git = "https://github.com/DivineDragonFanClub/cobapi" }

[dependencies]
cobapi = { git = "https://github.com/atarng/cobapi", branch = "remove_0.9.0_lock.a" }
engage = { git = "https://github.com/atarng/engage" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
unity = { git = "https://github.com/DivineDragonFanClub/unity" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
